@@ -1,13 +1,13 @@
 Package: netmeta
 Title: Network Meta-Analysis using Frequentist Methods
-Version: 0.9-3
+Version: 0.9-4
 Depends: meta (>= 4.6-0)
 Suggests: colorspace, rgl, hasseDiagram (>= 0.1.3), grid
 Imports: magic, MASS
 Authors@R: c(person("Gerta","Rücker", role="aut"),
     person("Guido","Schwarzer", email="sc@imbi.uni-freiburg.de", role=c("aut","cre")),
     person("Ulrike","Krahn", role="aut"), person("Jochem","König", role="aut"))
-Date: 2017-03-12
+Date: 2017-04-07
 URL: https://github.com/guido-s/netmeta http://meta-analysis-with-r.org
 Description: A comprehensive set of functions providing frequentist methods for network meta-analysis and supporting Schwarzer et al. (2015) <DOI:10.1007/978-3-319-21416-0>, Chapter 8 "Network Meta-Analysis":
  - frequentist network meta-analysis following Rücker (2012) <DOI:10.1002/jrsm.1058>;
@@ -20,11 +20,11 @@ Description: A comprehensive set of functions providing frequentist methods for 
 License: GPL (>= 2)
 Encoding: UTF-8
 NeedsCompilation: no
-Packaged: 2017-03-12 06:39:29 UTC; sc
+Packaged: 2017-04-07 14:10:38 UTC; sc
 Author: Gerta Rücker [aut],
   Guido Schwarzer [aut, cre],
   Ulrike Krahn [aut],
   Jochem König [aut]
 Maintainer: Guido Schwarzer <sc@imbi.uni-freiburg.de>
 Repository: CRAN
-Date/Publication: 2017-03-12 11:35:33
+Date/Publication: 2017-04-07 23:07:35 UTC
