@@ -1,3 +1,13 @@
+*** netmeta, version 0.9-4, 2017-04-07 ***
+
+ ** Bug fix release **
+
+  * netsplit() sometimes used wrong comparison labels
+
+  * new internal function matchcomps() to match comparison labels
+    between netmeta() and netmeasures()
+
+
 *** netmeta, version 0.9-3, 2017-03-12 ***
 
  ** Major changes **
